[package]
name = "saphir-cookie"
authors = ["Alex Crichton <alex@alexcrichton.com>", "Sergio Benitez <sb@sergio.bz>", "Richer Archambault <richer.arc@gmail.com>"]
version = "0.13.2"
license = "MIT/Apache-2.0"
repository = "https://github.com/richerarc/saphir-cookie"
documentation = "https://docs.rs/saphir-cookie"
description = """
Crate for parsing HTTP cookie headers and managing a cookie jar. Supports signed
and private (encrypted + signed) jars.
"""

[features]
secure = ["ring", "base64"]
percent-encode = ["percent-encoding"]

[dependencies]
time = "0.1"
chrono = "0.4.13"
percent-encoding = { version = "2.0", optional = true }
ring = { version = "0.16", optional = true }
base64 = { version = "0.11", optional = true }

[package.metadata.docs.rs]
all-features = true
